--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "vacuumtube",
+    "name": "Leanback-TV",
     "version": "1.3.17",
-    "description": "YouTube TV interface on the desktop",
+    "description": "Generic Leanback TV interface on the desktop",
     "main": "index.js",
     "scripts": {
         "start": "electron .",
@@ -12,24 +12,24 @@
         "linux:build-appimage": "electron-builder --linux appimage"
     },
     "keywords": [],
-    "author": "shy (shy@shy.rocks)",
-    "license": "MIT",
+    "author": "Digital Greenery",
+    "license": "MPL-2.0",
     "build": {
-        "appId": "rocks.shy.VacuumTube",
-        "productName": "VacuumTube",
-        "artifactName": "VacuumTube-${arch}.${ext}",
+        "appId": "digitalgreenery.Leanback-TV",
+        "productName": "Leanback-TV",
+        "artifactName": "Leanback-TV-${arch}.${ext}",
         "linux": {
             "icon": "./assets/icons",
-            "synopsis": "YouTube TV interface on the desktop",
+            "synopsis": "Generic Leanback TV interface on the desktop",
             "category": "AudioVideo",
             "desktop": {
-                "Name": "VacuumTube",
-                "GenericName": "YouTube Leanback",
+                "Name": "Leanback-TV",
+                "GenericName": "Leanback Player",
                 "Type": "Application",
                 "Categories": "AudioVideo;",
-                "Keywords": "YouTube;YT;"
+                "Keywords": ";"
             },
-            "maintainer": "shy+vacuumtube@shy.rocks",
+            "maintainer": "digitalgreenery@proton.me",
             "target": [
                 {
                     "target": "deb",
@@ -56,7 +56,7 @@
         },
         "win": {
             "icon": "./assets/icon.ico",
-            "artifactName": "VacuumTube-${arch}-Portable.zip",
+            "artifactName": "Leanback-TV-${arch}-Portable.zip",
             "target": [
                 {
                     "target": "nsis",
@@ -75,8 +75,8 @@
             ]
         },
         "nsis": {
-            "artifactName": "VacuumTube-Setup.${ext}",
-            "uninstallDisplayName": "VacuumTube",
+            "artifactName": "Leanback-TV-Setup.${ext}",
+            "uninstallDisplayName": "Leanback-TV",
             "oneClick": false,
             "allowToChangeInstallationDirectory": true,
             "allowElevation": true,
@@ -96,8 +96,8 @@
         },
         "publish": {
             "provider": "github",
-            "owner": "shy1132",
-            "repo": "VacuumTube"
+            "owner": "Digital Greenery",
+            "repo": "Leanback-TV"
         }
     },
     "devDependencies": {
